--- a/cmd/config/config.json
+++ b/cmd/config/config.json
@@ -1,4 +1,6 @@
 {
+    "port" : "3000",
+
     "mysql_db_user"     : "root",
     "mysql_db_pass"     : "123456",
     "mysql_db_name"     : "wallet_service",
