refactor, infura service eth_blockNumber done

--- a/cmd/config/json/config.json
+++ b/cmd/config/json/config.json
@@ -13,5 +13,6 @@
     "mail_encrypted_pass"   : "",
     "mail_encryption_key"   : "",
 
-    "crypto_apis_key"     : ""
+    "crypto_apis_key"       : "",
+    "infura_project_id"     : ""
 }
